# myco

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  Packager.toml  README.md  sketch.html
.claude/skills/: SKILL.md  new-cap.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-window-grid-and-build-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-PATTERNS.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-terminal-cap/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-webview-caps/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-UI-SPEC.md  03-VALIDATION.md
.planning/phases/04-application-frame-and-theming/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-UI-SPEC.md
.planning/phases/05-configuration-and-persistence/: 05-01-PLAN.md  05-REVIEW.md  (+16 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benches/: layout.rs  rendering.rs  terminal.rs
resources/: menu.json
resources/context/: excalidraw-sketches.md  tldraw-sketches.md
resources/excalidraw/: index.html  package-lock.json  package.json  vite.config.ts
resources/tldraw/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: package.sh
src/: app.rs  context.rs  lib.rs  main.rs  settings.rs  status_bar.rs  theme.rs  window.rs
src/agent_monitor/: config.rs  mod.rs  renderer.rs
src/canvas/: assets.rs  mod.rs  state.rs
src/cap/: mod.rs
src/config/: global.rs  mod.rs  persistence.rs  project.rs  registry.rs
src/grid/: divider.rs  layout.rs  mod.rs  operations.rs  panel.rs  tree.rs
src/heartbeat/: config.rs  llm_client.rs  mod.rs  prompt.rs  renderer.rs  scheduler.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/markdown/: layout.rs  mod.rs  parser.rs  renderer.rs
src/monitor/: intervention.rs  mod.rs  patterns.rs
src/picker/: mod.rs  renderer.rs
src/platform/: context_menu.rs  dialog.rs  macos.rs  menu.rs  mod.rs
src/renderer/: gpu_state.rs  mod.rs  quad_renderer.rs  text_renderer.rs
src/right_sidebar/: mod.rs  renderer.rs
src/shaders/: quad.wgsl
src/shortcuts/: chord.rs  defaults.rs  mod.rs  registry.rs  serialization.rs
src/sidebar/: mod.rs  renderer.rs  search.rs
src/terminal/: autocomplete.rs  colors.rs  event_listener.rs  history.rs  input.rs  mod.rs  renderer.rs  search.rs  selection.rs  state.rs
src/theme/: builtin.rs  colors.rs  definition.rs  loader.rs  mod.rs
src/toast/: mod.rs  renderer.rs
src/watcher/: mod.rs
tests/: fuzz_parsers.rs  gpu_snapshot.rs  ipc_contract.rs  terminal_integration.rs
(+99 files in other folders)
