[package]
name = "myco"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
# Rendering pipeline
wgpu = "29.0.3"
glyphon = "0.11.0"
pollster = "0.4"

# Windowing
winit = "0.30.13"

# Layout
taffy = { version = "0.10.1", features = ["grid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal emulation
alacritty_terminal = "0.26.0"
copypasta = "0.10.2"
parking_lot = "0.12"
regex-syntax = "0.8"

# Vertex buffer data
bytemuck = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSButton", "NSControl", "NSView", "NSResponder"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry"] }
