[package]
name = "myco"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "myco"
path = "src/lib.rs"

[[bin]]
name = "myco"
path = "src/main.rs"

[dependencies]
# Rendering pipeline
wgpu = "29.0.3"
glyphon = "0.11.0"
pollster = "0.4"

# Windowing
winit = "0.30.13"

# Layout
taffy = { version = "0.10.1", features = ["flexbox", "grid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal emulation
alacritty_terminal = "0.26.0"
copypasta = "0.10.2"
parking_lot = "0.12"
regex-syntax = "0.8"

# Webview embedding (Phase 3)
wry = "0.55"

# File watching (Phase 3)
notify = "8.2"
notify-debouncer-full = "0.7"

# Markdown parsing (Phase 3)
pulldown-cmark = "0.13"

# HTTP response builder (for wry custom protocol)
http = "1"

# Vertex buffer data
bytemuck = { version = "1", features = ["derive"] }
dirs = "6.0.0"

# Git integration
git2 = "0.20"

# System monitoring
sysinfo = "0.39"
libc = "0.2"

# HTTP client (heartbeat LLM integration)
reqwest = { version = "0.13", features = ["blocking", "json"] }

# File glob pattern matching (heartbeat file inputs)
glob = "0.3"

[dev-dependencies]
tempfile = "3"
proptest = "1.11"
criterion = { version = "0.8", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }
image-compare = "0.5"
portable-pty = "0.9"

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "terminal"
harness = false

[profile.dev.package."*"]
opt-level = 2

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSWindow", "NSButton", "NSControl", "NSView", "NSResponder", "NSMenu", "NSMenuItem", "NSApplication", "NSEvent", "NSRunningApplication", "NSOpenPanel", "NSSavePanel", "NSPanel"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSGeometry", "NSString", "NSThread", "NSURL"] }
